--- a/service/configs/db_config.yaml
+++ b/service/configs/db_config.yaml
@@ -2,4 +2,4 @@ database_user: "postgres"
 database_password: "rajat"
 database_host: "127.0.0.1"
 database_port: 5432
-database_name: "caching3"
+database_name: "caching"
